--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <display-name>FrontController</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
+	<display-name>FrontController</display-name>
 
-  <welcome-file-list>
-    <welcome-file>login.html</welcome-file>
-  </welcome-file-list>
-  
-  <servlet>
-    <servlet-name>DispatcherServlet</servlet-name>
-    <servlet-class>com.revature.request.DispatcherServlet</servlet-class>
-  </servlet>
+	<welcome-file-list>
+		<welcome-file>login.html</welcome-file>
+	</welcome-file-list>
 
-  <servlet-mapping>
-    <servlet-name>DispatcherServlet</servlet-name>
-    <!-- * it's a wildcard (which means "Anything") -->
-    <!-- .something it's called cExtended Mapping -->
-    <url-pattern>*.do</url-pattern>
-  </servlet-mapping>
-  
-  <!-- ERROR PAGEES! -->
-  
-  <!-- Session Objects will expire in 30 minutes -->
-  <session-config>
-    <session-timeout>30</session-timeout>
-  </session-config>
+	<servlet>
+		<servlet-name>DispatcherServlet</servlet-name>
+		<servlet-class>com.revature.request.DispatcherServlet</servlet-class>
+	</servlet>
+
+
+
+	<servlet-mapping>
+		<servlet-name>DispatcherServlet</servlet-name>
+		<!-- * it's a wildcard (which means "Anything") -->
+		<!-- .something it's called cExtended Mapping -->
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
+
+	<!-- ERROR PAGEES! -->
+	<!-- For 500 (exceptions thrown) -->
+	<error-page>
+		<exception-type>java.lang.Throwable</exception-type>
+		<location>/oops.html</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404.html</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>403</error-code>
+		<location>/403.html</location>
+	</error-page>
+
+	<!-- For a specific status code -->
+
+	<!-- Session Objects will expire in 30 minutes -->
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 
 </web-app>
